--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,11 @@ matrix:
         - bundle exec danger
     - rvm: 2.5.3
       gemfile: Gemfile
-    - rvm: 2.5.3
+    - rvm: 2.7.0
+      gemfile: gemfiles/rack1.gemfile
+    - rvm: 2.7.0
+      gemfile: gemfiles/rack2-0.gemfile
+    - rvm: 2.7.0
       gemfile: gemfiles/rack_edge.gemfile
     - rvm: 2.5.3
       gemfile: gemfiles/rails_edge.gemfile
